--- a/views/home.ejs
+++ b/views/home.ejs
@@ -51,7 +51,7 @@
                 <button type="button" class="btn btn-lg btn-outline-secondary centered">
                     Zobacz kolekcję zimową
                 </button>
-                <img class="kolekcje" src="/Zdjecia/kolekcja_1/zestawienie_1.jpg" alt="Kolekcja Zimowa">
+                <img class="kolekcje" src="/Zdjecia/zestawienie_1.jpg" alt="Kolekcja Zimowa">
             </div>
         </a>
         <a href="/kolekcja_letnia">
@@ -59,7 +59,7 @@
                 <button type="button" class="btn btn-lg btn-outline-secondary centered">
                     Zobacz kolekcję letnią
                 </button>
-                <img class="kolekcje" src="/Zdjecia/kolekcja_2/zestawienie_2.jpg" alt="Kolekcja Letnia">
+                <img class="kolekcje" src="/Zdjecia/zestawienie_2.jpg" alt="Kolekcja Letnia">
             </div>
         </a>
     </div>
@@ -69,7 +69,7 @@
                 <button type="button" class="btn btn-lg btn-outline-secondary centered">
                     Odkryj czy jesteśmy w Twojej okolicy
                 </button>
-                <img class="kolekcje" src="/Zdjecia/kolekcja_1/zestawienie_1.jpg" alt="Kolekcja Zimowa">
+                <img class="kolekcje" src="/Zdjecia/zestawienie_1.jpg" alt="Kolekcja Zimowa">
             </div>
         </a>
     </div>
